fix: overflow auto

--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .table {
